--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title>贪吃蛇</title>
+</head>
 <body>
     <canvas width="400" height="400" id="can" style="background: #000"></canvas>
     <script>
@@ -7,6 +11,7 @@
             head = null
             dir = 1,
             apple = 87,
+            score = 0,
             ctx = document.getElementById('can').getContext('2d');
         function draw(n, c) {
             ctx.fillStyle = c;
@@ -19,10 +24,11 @@
         function autorun() {
             snk.unshift(head = snk[0] + dir);
             if (snk.indexOf(head,1) > 0 || head<0 || head>399 || dir==-1 && head%20==19 || dir==1 && head%20==0) {
-                return alert('Game Over !')
+                return alert('得分：' + score);
             }
             draw(head, '#0f0');
             if (head == apple) {
+                score++;
                 while (snk.indexOf(apple = ~~(Math.random() * 400)) >= 0);
                 draw(apple, "#f00");
             } else {
