--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>贪吃蛇</title>
+    <style>*{margin: 0;} canvas{width: 100%;}</style>
 </head>
 <body>
     <canvas width="400" height="400" id="can" style="background: #000"></canvas>
@@ -21,10 +23,6 @@
             ctx.fillStyle = c;
             ctx.fillRect(n%20*20+1,~~(n/20)*20+1,18,18);
         }
-        document.onkeydown = function (e) {
-            var tmpdir = [-1,-20,1,20][(e||event).keyCode - 37] || dir
-            dir = snk[1]-snk[0] == tmpdir ? dir : tmpdir
-        }
         function autorun() {
             snk.unshift(head = snk[0] + dir);
             if (snk.indexOf(head,1) > 0 || head<0 || head>399 || dir==-1 && head%20==19 || dir==1 && head%20==0) {
@@ -42,6 +40,31 @@
             setTimeout(autorun, speed);
         }
         autorun();
+        document.onkeydown = function (e) {
+            var tmpdir = [-1,-20,1,20][(e||event).keyCode - 37] || dir
+            dir = snk[1]-snk[0] == tmpdir ? dir : tmpdir
+        }
+        var sX, sY;
+        document.addEventListener('touchstart', function (e) {
+            e.preventDefault();
+            sX = e.touches[0].pageX;
+            sY = e.touches[0].pageY;
+        }, false);
+        document.addEventListener('touchend', function (e) {
+            var eX = e.changedTouches[0].pageX,
+                eY = e.changedTouches[0].pageY;
+            var dtX = eX - sX,
+                dtY = eY - sY;
+            if (dtX > 20 && dtX > Math.abs(dtY)) {
+                dir = 1;
+            } else if (dtX < -20 && dtX < -Math.abs(dtY)) {
+                dir = -1;
+            } else if (dtY > 20) {
+                dir = 20;
+            } else if (dtY < -20) {
+                dir = -20;
+            }
+        }, false);
     </script>
 </body>
 </html>
