--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             if (pause) return
             snk.unshift(head = snk[0] + dir);
             if (snk.indexOf(head,1) > 0 || head<0 || head>399 || dir==-1 && head%20==19 || dir==1 && head%20==0) {
-                confirm('得分：' + score + '，是否重来？') && reset();
+                alert('得分：' + score);
+                reset();
                 document.title = '我的贪吃蛇长度达到了' + score;
                 return false;
             }
