--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             e.preventDefault();
             sX = e.touches[0].pageX;
             sY = e.touches[0].pageY;
-        }, false);
+        }, {passive: false});
         document.addEventListener('touchend', function (e) {
             var eX = e.changedTouches[0].pageX,
                 eY = e.changedTouches[0].pageY;
